--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <h1>Trần Ngọc Minh Quân</h1>
       <h2>STUDENT</h2>
 
-      <figure >
-        <img src="images/me1.jpg" alt="Minh Quan">
+      <figure class="text-center">
+        <img src="images/me1.jpg" alt="Minh Quan" class="d-none d-sm-block">
+        <img src="images/me2.jpg" alt="Minh Quan" class="d-block d-sm-none">
         <figcaption>Trần Ngọc Minh Quân</figcaption>
       </figure>
 
@@ -42,82 +43,87 @@
 
      <!-- People I admire -->
 
-    <div>
+    <div class="my-flexbox-container">
       <div class="my-padding-right-19">
-        <button type="button" class="my-button-people-name">
+        <button type="button" class="my-button-people-name btn btn-secondary">
           Song Minho
         </button>
 
-        <button type="button" class="my-button-jump-to-people">
-          <a href="#top-mino">#</a>
+        <button type="button" class="my-button-jump-to-people d-none btn btn-danger">
+          <a href="#song-minho">#</a>
         </button>
       </div>
 
       <div class="my-padding-right-19">
-        <button type="button" class="my-button-people-name">
+        <button type="button" class="my-button-people-name btn btn-secondary">
           Kim Ji-soo
         </button>
 
-        <button type="button" class="my-button-jump-to-people">
-          <a href="#top-jisoo">#</a>
+        <button type="button" class="my-button-jump-to-people d-none btn btn-danger">
+          <a href="#kim-jisoo">#</a>
         </button>
       </div>
 
       <div class="my-padding-right-19">
-        <button type="button" class="my-button-people-name">
+        <button type="button" class="my-button-people-name btn btn-secondary">
           Christian Pulisic
         </button>
 
-        <button type="button" class="my-button-jump-to-people">
-          <a href="#top-pulisic">#</a>
+        <button type="button" class="my-button-jump-to-people d-none btn btn-danger">
+          <a href="#christian-pulisic">#</a>
         </button>
       </div>
 
-      <div>
-        <button type="button" class="my-button-people-name">
+      <div class="my-padding-right-19">
+        <button type="button" class="my-button-people-name btn btn-secondary">
           Đặng Lê Nguyên Vũ
         </button>
 
-        <button type="button" class="my-button-jump-to-people">
-          <a href="#top-vu">#</a>
+        <button type="button" class="my-button-jump-to-people d-none btn btn-danger">
+          <a href="#nguyen-vu">#</a>
         </button>
       </div>
     </div>
 
 
-    <div class="people" id="song-minho">
+    <div class="people d-none" id="song-minho">
       <!-- Song Minho-->
-      <a href="https://vi.wikipedia.org/wiki/Song_Mino" target="_blank">
-       <h1 id="top-mino">Song Minho</h1>
-      </a>
+      <div class="name">
+        <a href="https://vi.wikipedia.org/wiki/Song_Mino" target="_blank">
+         <h1 id="top-mino">Song Minho</h1>
+        </a>
 
-      <h2>SINGER/DANCER</h2>
+        <h2>SINGER/DANCER</h2>
 
-      <figure>
-        <img src="images/mino2.jpg" alt="Song Minho">
-        <figcaption>Song Minho</figcaption>
-      </figure>
+        <figure>
+          <img src="images/mino2.jpg" alt="Song Minho">
+          <figcaption>Song Minho</figcaption>
+        </figure>
 
-      <a href="#top"> Top </a>
+        <a href="#top"> Top </a>
+      </div>
 
-      <p>
-        Song Mino bắt đầu sự nghiệp ca hát trong giới underground. Anh là rapper trong một khoảng thời gian cùng với Pyo Jihoon (P.O BLOCK B), Woo Jiho (Zico BLOCK B), Woo Jiseok (Taewoon SPEED), Sim Jongsu (SIMS M.I.B), Scotch VIP, và Roydo. Song Minho lấy nghệ danh là Mino hay là Hugeboy Mino, anh đã gia nhập vào Royal Class – một nhóm underground. Mino đã sáng tác và sản xuất nhiều bài hát/rap của riêng mình và nhiều bản mixtape khác.
-      </p>
+        <div class="biography">
+          <p>
+            Song Mino bắt đầu sự nghiệp ca hát trong giới underground. Anh là rapper trong một khoảng thời gian cùng với Pyo Jihoon (P.O BLOCK B), Woo Jiho (Zico BLOCK B), Woo Jiseok (Taewoon SPEED), Sim Jongsu (SIMS M.I.B), Scotch VIP, và Roydo. Song Minho lấy nghệ danh là Mino hay là Hugeboy Mino, anh đã gia nhập vào Royal Class – một nhóm underground. Mino đã sáng tác và sản xuất nhiều bài hát/rap của riêng mình và nhiều bản mixtape khác.
+          </p>
 
-      <p>
-        Minho là một ngôi sao trong chương trình thực tế của YGE mang tên Who Is Next. Chương trình là cuộc chiến sống còn của 11 thực tập sinh được tuyển chọn và chia thành 2 nhóm A và B. Hai nhóm sẽ thi đấu với nhau và nhóm chiến thắng thông qua lượng bình chọn của khán giả sẽ được chính thức debut.
-      </p>
+          <p>
+            Minho là một ngôi sao trong chương trình thực tế của YGE mang tên Who Is Next. Chương trình là cuộc chiến sống còn của 11 thực tập sinh được tuyển chọn và chia thành 2 nhóm A và B. Hai nhóm sẽ thi đấu với nhau và nhóm chiến thắng thông qua lượng bình chọn của khán giả sẽ được chính thức debut.
+          </p>
 
-      <p>
-        Giữa năm 2015, anh tham gia cuộc thi "Show me the money" season 4 thu hút sự chú ý của cộng đồng KPop. Ngay từ đầu chương trình, anh đã trở thành mục tiêu chỉ trích của hàng loạt thí sinh khác vì xuất thân thần tượng.
-      </p>
+          <p>
+            Giữa năm 2015, anh tham gia cuộc thi "Show me the money" season 4 thu hút sự chú ý của cộng đồng KPop. Ngay từ đầu chương trình, anh đã trở thành mục tiêu chỉ trích của hàng loạt thí sinh khác vì xuất thân thần tượng.
+          </p>
 
-      <audio controls>
-        <source src="audio/body.mp3" type="audio/mpeg">
-      </audio>
-    </div>
+          <audio controls>
+            <source src="audio/body.mp3" type="audio/mpeg">
+          </audio>
+        </div>
+      </div>
 
-    <div class="people" id="kim-jisoo">
+
+    <div class="people d-none" id="kim-jisoo">
       <!-- Kim Ji-soo -->
       <div class="name">
 
@@ -155,70 +161,82 @@
       </div>
     </div>
 
-    <div class="people" id="christian-pulisic">
+    <div class="people d-none" id="christian-pulisic">
       <!-- Christian Pulisic -->
 
-      <a href="https://vi.wikipedia.org/wiki/Christian_Pulisic" target="_blank">
-        <h1 id="top-pulisic">Christian Pulisic</h1>
-      </a>
+      <div class="name">
+        <a href="https://vi.wikipedia.org/wiki/Christian_Pulisic" target="_blank">
+          <h1 id="top-pulisic">Christian Pulisic</h1>
+        </a>
 
-      <h2>FOOTBALLER</h2>
+        <h2>FOOTBALLER</h2>
 
-      <figure>
-        <img src="images/pulisic1.jpg" alt="Christian Pulisic">
-        <figcaption>Christian Pulisic</figcaption>
-      </figure>
+        <figure>
+          <img src="images/pulisic1.jpg" alt="Christian Pulisic">
+          <figcaption>Christian Pulisic</figcaption>
+        </figure>
 
-      <a href="#top"> Top </a>
+        <a href="#top"> Top </a>
+      </div>
 
-      <p>
-        Christian Mate Pulisic (sinh ngày 18 tháng 9 năm 1998) là cầu thủ bóng đá người Mỹ đang thi đấu cho Borussia Dortmund theo hợp đồng cho mượn từ Chelsea và Đội tuyển bóng đá quốc gia Hoa Kỳ ở vị trí tiền vệ tấn công và tiền vệ cánh.
-      </p>
+      <div class="biography">
+        <p>
+          Christian Mate Pulisic (sinh ngày 18 tháng 9 năm 1998) là cầu thủ bóng đá người Mỹ đang thi đấu cho Borussia Dortmund theo hợp đồng cho mượn từ Chelsea và Đội tuyển bóng đá quốc gia Hoa Kỳ ở vị trí tiền vệ tấn công và tiền vệ cánh.
+        </p>
 
-      <p>
-        Là thành viên của đội trẻ Borussia Dortmund từ năm 2015, Pulisic bắt đầu thi đấu cho đội một trong mùa giải 2015-16. Tháng 4 năm 2016, Pulisic trở thành cầu thủ nước ngoài trẻ nhất ghi bàn tại Bundesliga. Cũng trong tháng này, anh cũng trở thành cầu thủ trẻ nhất lập cú đúp tại Bundesliga. Ngày 2 tháng 1 năm 2019, anh chính thức chuyển đến Chelsea với phí chuyển nhượng 64 triệu € để trở thành cầu thủ người Mỹ có giá trị chuyển nhượng cao nhất lịch sử.
-      </p>
+        <p>
+          Là thành viên của đội trẻ Borussia Dortmund từ năm 2015, Pulisic bắt đầu thi đấu cho đội một trong mùa giải 2015-16. Tháng 4 năm 2016, Pulisic trở thành cầu thủ nước ngoài trẻ nhất ghi bàn tại Bundesliga. Cũng trong tháng này, anh cũng trở thành cầu thủ trẻ nhất lập cú đúp tại Bundesliga. Ngày 2 tháng 1 năm 2019, anh chính thức chuyển đến Chelsea với phí chuyển nhượng 64 triệu € để trở thành cầu thủ người Mỹ có giá trị chuyển nhượng cao nhất lịch sử.
+        </p>
 
-      <p>
-        Pulisic gia nhập đội U-17 Borussia Dortmund từ tháng 2 năm 2015. Tại U-17 Dortmund, anh có 6 bàn thắng và 5 đường chuyền thành bàn. Sau khi được đôn lên đội U-19 Dortmund, anh tiếp tục có thêm 4 bàn thắng và 3 pha kiến tạo. Pulisic bắt đầu có cơ hội thi đấu cho đội một từ tháng 1 năm 2016 sau kỳ nghỉ đông.
-      </p>
+        <p>
+          Pulisic gia nhập đội U-17 Borussia Dortmund từ tháng 2 năm 2015. Tại U-17 Dortmund, anh có 6 bàn thắng và 5 đường chuyền thành bàn. Sau khi được đôn lên đội U-19 Dortmund, anh tiếp tục có thêm 4 bàn thắng và 3 pha kiến tạo. Pulisic bắt đầu có cơ hội thi đấu cho đội một từ tháng 1 năm 2016 sau kỳ nghỉ đông.
+        </p>
 
-      <video width="1280" height="720" controls>
-        <source src="video/skills.mp4" type="video/mp4">
-      </video>
+        <video width="1280" height="720" controls>
+          <source src="video/skills.mp4" type="video/mp4">
+        </video>
+      </div>
+
    </div>
 
-   <div class="people" id="nguyen-vu">
+   <div class="people d-none" id="nguyen-vu">
       <!-- Dang Le Nguyen Vu -->
 
-      <a href="https://vi.wikipedia.org/wiki/Đặng_Lê_Nguyên_Vũ" target="_blank">
-        <h1 id="top-vu">Dang Le Nguyen Vu</h1>
-      </a>
-      <h2>BUSINESSMAN</h2>
+      <div class="name">
+        <a href="https://vi.wikipedia.org/wiki/Đặng_Lê_Nguyên_Vũ" target="_blank">
+          <h1 id="top-vu">Dang Le Nguyen Vu</h1>
+        </a>
+        <h2>BUSINESSMAN</h2>
 
-      <figure>
-        <img src="images/dlnv1.jpg" alt="Dang Le Nguyen Vu">
-        <figcaption>Dang Le Nguyen Vu</figcaption>
-      </figure>
+        <figure>
+          <img src="images/dlnv1.jpg" alt="Dang Le Nguyen Vu">
+          <figcaption>Dang Le Nguyen Vu</figcaption>
+        </figure>
 
-      <a href="#top"> Top </a>
+        <a href="#top"> Top </a>
+      </div>
 
-      <p>
-        Đặng Lê Nguyên Vũ (sinh năm 1971) là một doanh nhân Việt Nam. Ông là người sáng lập, chủ tịch kiêm Tổng Giám đốc Tập đoàn Trung Nguyên, Việt Nam. Ông là người được National Geographic Traveller và Forbes Asia vinh danh là "Vua Cà phê Việt Nam".
-      </p>
+      <div class="biography">
+        <p>
+          Đặng Lê Nguyên Vũ (sinh năm 1971) là một doanh nhân Việt Nam. Ông là người sáng lập, chủ tịch kiêm Tổng Giám đốc Tập đoàn Trung Nguyên, Việt Nam. Ông là người được National Geographic Traveller và Forbes Asia vinh danh là "Vua Cà phê Việt Nam".
+        </p>
 
-      <p>
-        Trưởng thành từ kinh doanh cà phê, Đặng Lê Nguyên Vũ đã nâng dần ý nghĩa của việc kinh doanh cà phê từ kinh doanh thuần túy đến đạo cà phê, đưa Việt Nam thành thánh địa cà phê toàn cầu, và cuối cùng là đưa công ty thành một tôn giáo trong đó ông Vũ được thông linh và được trao sứ mệnh "cứu nhân loại". Trong quá trình này, vợ ông, Lê Hoàng Diệp Thảo đã bị đưa ra khỏi công ty và hai người đã tranh chấp quyền điều khiển công ty từ năm 2015 tới nay.
-      </p>
+        <p>
+          Trưởng thành từ kinh doanh cà phê, Đặng Lê Nguyên Vũ đã nâng dần ý nghĩa của việc kinh doanh cà phê từ kinh doanh thuần túy đến đạo cà phê, đưa Việt Nam thành thánh địa cà phê toàn cầu, và cuối cùng là đưa công ty thành một tôn giáo trong đó ông Vũ được thông linh và được trao sứ mệnh "cứu nhân loại". Trong quá trình này, vợ ông, Lê Hoàng Diệp Thảo đã bị đưa ra khỏi công ty và hai người đã tranh chấp quyền điều khiển công ty từ năm 2015 tới nay.
+        </p>
 
-      <p>
-        Năm 2005, Trung Nguyên khánh thành nhà máy chế biến cà phê lớn nhất Việt Nam tại Bình Dương, cho vợ là bà Lê Hoàng Diệp Thảo, Tổng giám đốc Công ty Cổ phần cà phê hòa tan Trung Nguyên đứng tên. Sau 6 tháng tranh chấp vợ chồng, ngày 21/4/2016 ông đã sang lại tên mình. Cà phê Trung Nguyên đã được Bộ Ngoại giao Việt Nam chọn làm Đại sứ ngoại giao văn hóa và làm quà tặng các nguyên thủ quốc gia.
-      </p>
+        <p>
+          Năm 2005, Trung Nguyên khánh thành nhà máy chế biến cà phê lớn nhất Việt Nam tại Bình Dương, cho vợ là bà Lê Hoàng Diệp Thảo, Tổng giám đốc Công ty Cổ phần cà phê hòa tan Trung Nguyên đứng tên. Sau 6 tháng tranh chấp vợ chồng, ngày 21/4/2016 ông đã sang lại tên mình. Cà phê Trung Nguyên đã được Bộ Ngoại giao Việt Nam chọn làm Đại sứ ngoại giao văn hóa và làm quà tặng các nguyên thủ quốc gia.
+        </p>
 
-      <iframe width="1280" height="720" src="https://www.youtube.com/embed/3gyuNx-4hsI"></iframe>
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/3gyuNx-4hsI"></iframe>
+      </div>
+
+
    </div>
 
     <script type="text/javascript" src="./scripts/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="./scripts/modernizr/modernizr.mq.js"></script>
     <script type="text/javascript" src="./bootstrap-4.3.1-dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="./scripts/jquery/app.js"></script>
     <script type="text/javascript" src="./scripts/jquery/index.js"></script>
